Close dialogs in selenium tests using 'close' button

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addProjectsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addProjectsPopup.xhtml
@@ -58,7 +58,7 @@
                                      value="#{msgs.close}"
                                      icon="fa fa-times fa-lg"
                                      iconPos="right"
-                                     styleClass="secondary right"/>
+                                     styleClass="secondary right close"/>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
