--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addClientsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addClientsPopup.xhtml
@@ -55,7 +55,7 @@
                                      value="#{msgs.close}"
                                      icon="fa fa-times fa-lg"
                                      iconPos="right"
-                                     styleClass="secondary right"/>
+                                     styleClass="secondary right close"/>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
