--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -72,9 +72,25 @@
                       showHeader="false">
                 <p:graphicImage id="loading" alt="loading" value="/pages/images/ajax-loader.gif"/>
             </p:dialog>
-            <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" styleClass="confirm-delete" id="deleteConfirmDialog">
-                <p:commandButton id="yesButton" value="#{msgs.yes}" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" immediate="true" update="@(.ui-datatable)"/>
-                <p:commandButton id="noButton" value="#{msgs.no}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+            <p:confirmDialog global="true"
+                             showEffect="fade"
+                             hideEffect="fade"
+                             styleClass="confirm-delete"
+                             id="deleteConfirmDialog">
+                <p:commandButton
+                        id="yesButton"
+                        value="#{msgs.yes}"
+                        type="button"
+                        styleClass="ui-confirmdialog-yes primary right"
+                        icon="fa fa-check fa-lg"
+                        immediate="true"
+                        update="@(.ui-datatable)"/>
+                <p:commandButton
+                        id="noButton"
+                        value="#{msgs.no}"
+                        type="button"
+                        styleClass="ui-confirmdialog-no secondary right"
+                        icon="fa fa-times fa-lg" />
             </p:confirmDialog>
             <ui:include src="/WEB-INF/templates/includes/legal.xhtml"/>
             <ui:insert name="dialog"/>
