--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/legal.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/legal.xhtml
@@ -26,6 +26,7 @@
                   showHeader="false"
                   resizable="false"
                   modal="true">
+            <h3>#{msgs.imprint}</h3>
             <h:panelGroup layout="block"
                           styleClass="dialogFieldWrapper">
                 <h:outputText id="imprintText"
@@ -51,6 +52,7 @@
                   showHeader="false"
                   resizable="false"
                   modal="true">
+            <h3>#{msgs.dataPrivacy}</h3>
             <h:panelGroup layout="block"
                           styleClass="dialogFieldWrapper">
                 <h:outputText id="dataPrivacyText"
@@ -76,6 +78,7 @@
                   showHeader="false"
                   resizable="false"
                   modal="true">
+            <h3>#{msgs.termsOfUse}</h3>
             <h:panelGroup layout="block"
                           styleClass="dialogFieldWrapper">
                 <h:outputText id="termsOfUseText"
