--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
@@ -56,8 +56,7 @@
                                         <h:outputText value="#{msgs.title}:"/>
                                     </td>
                                     <td>
-                                        <h:outputText
-                                                value="#{CurrentTaskForm.batchHelper.currentStep.localizedTitle}"/>
+                                        <h:outputText value="#{CurrentTaskForm.batchHelper.currentStep.title}"/>
                                     </td>
                                 </tr>
                                 <tr>
