--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -15,7 +15,6 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:o="http://omnifaces.org/ui"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable id="templateTable"
@@ -113,7 +112,7 @@
                     </h:form>
                 </p:panelGrid>
 
-                <o:graphicImage rendered="#{item.workflow ne null}" value="#{item.diagramImage}" dataURI="true" />
+                <o:graphicImage rendered="#{item.workflow ne null}" value="#{TemplateForm.tasksDiagram}" dataURI="true" />
             </div>
         </p:rowExpansion>
 
